<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.project2_info_6124.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_places"
        android:name="com.example.project2_info_6124.ui.places.PlacesFragment"
        android:label="@string/menu_places"
        tools:layout="@layout/fragment_places" />

    <fragment
        android:id="@+id/nav_email"
        android:name="com.example.project2_info_6124.ui.email.EmailFragment"
        android:label="@string/menu_email"
        tools:layout="@layout/fragment_email" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.project2_info_6124.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>